// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks spinner as success 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
[?25h"
`;

exports[`marks spinner as success with mark 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
[?25h[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1G[32m✔[39m Successful

[?25h[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1GV #success
[?25h"
`;

exports[`marks spinner as success with message 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
[?25h[?25l[1G[33m⠋[39m #success[?25l[1G[33m⠙[39m #success[?25l[1G[33m⠹[39m #success[2K[1G[32m✔[39m Successful

[?25h"
`;
